--- a/index.html
+++ b/index.html
@@ -92,11 +92,29 @@
 
     <h3>This tag is styled by external css</h3>
 
-
-
-
-
-
+    <!-- link -->
+    <a href="first.html">This is hyperlink</a>
+    <br>
+    <br>
+    <a href="first.html" target="_blank">hyperlink with target<mark>(_blank for new tab)</mark> attribute</a>
+    <br>
+    <br>
+    <a href="index.html" target="_blank">hyperlink with target<mark>(_self for same tab)</mark> attribute</a>
+    <br>
+    <br>
+    <a href="first.html" target="_top">hyperlink with target<mark>(_top for same tab)</mark> attribute</a>
+    <br>
+    <br>
+    <a href="first.html" target="_top">hyperlink with target<mark>(_parent for same tab)</mark> attribute</a>
+    <br>
+    <br>
+    <a  href="first.html"><img  src="structure_of_html_doc.PNG" alt="There is an image" width="100px"><mark>image representation of hyperlink</mark></a>
+    <br>
+    <br>
+    <a href="mailto:veeramvinoth15042000@gmail.com"><mark>link to an email address</mark></a>
+    <br>
+    <br>
+    <button onclick="document.location='structure_of_html_doc.PNG'">link to an button</button>
 
 
 
