--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>LEARN HTML</title>
     <!-- favicon -->
         <!-- we can add the images to favicon as ico,png,gif,jpeg,svg for all browsers-->
-    <link rel="icon" href="../images/oasys_image.png" type="image/x-icon">
+    <link rel="icon" href="images/oasys_image.png" type="image/x-icon">
     <style>
         h4 {color:rgb(187, 20, 123);}
     </style>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: rgb(223, 236, 240);">
     <h1>This is h1 tag</h1>
@@ -30,12 +30,12 @@
 
     <h3><a href="https://veeram1026.w3spaces.com/">This is hyperlink inside the h3 tag</a></h3>
 
-    <img src="../images/image/structure_of_html_doc.PNG" alt="This is image" height="200px" width="400px">
+    <img src="images/image/structure_of_html_doc.PNG" alt="This is image" height="200px" width="400px">
 
     <br>
     <br>
 
-    <img src="../images/structur_of_html_doc.PNG" alt="This is img tag (example for 'alt' attribute)" height="200px" width="400px">
+    <img src="images/structur_of_html_doc.PNG" alt="This is img tag (example for 'alt' attribute)" height="200px" width="400px">
 
     <h2 title="This is h2 tag" style="color: blue;">Title attribute</h2>
 
@@ -100,7 +100,7 @@
     <a href="first.html">This is hyperlink</a>
     <br>
     <br>
-    <a href="first.html" target="_blank">hyperlink with target<mark>(_blank for new tab)</mark> attribute</a>
+    <a href="web_pages/first.html" target="_blank">hyperlink with target<mark>(_blank for new tab)</mark> attribute</a>
     <br>
     <br>
     <a href="index.html" target="_blank">hyperlink with target<mark>(_self for same tab)</mark> attribute</a>
@@ -109,16 +109,16 @@
     <a href="first.html" target="_top">hyperlink with target<mark>(_top for same tab)</mark> attribute</a>
     <br>
     <br>
-    <a href="first.html" target="_top">hyperlink with target<mark>(_parent for same tab)</mark> attribute</a>
+    <a href="web_pages/first.html" target="_top">hyperlink with target<mark>(_parent for same tab)</mark> attribute</a>
     <br>
     <br>
-    <a  href="first.html"><img  src="../images/image/structure_of_html_doc.PNG" alt="There is an image" width="100px"><mark>image representation of hyperlink</mark></a>
+    <a  href="web_pages/first.html"><img  src="images/image/structure_of_html_doc.PNG" alt="There is an image" width="100px"><mark>image representation of hyperlink</mark></a>
     <br>
     <br>
     <a href="mailto:veeramvinoth15042000@gmail.com"><mark>link to an email address</mark></a>
     <br>
     <br>
-    <button onclick="document.location='../images/image/structure_of_html_doc.PNG'">link to an button</button>
+    <button onclick="document.location='images/image/structure_of_html_doc.PNG'">link to an button</button>
     <br>
     <br>
 
@@ -128,18 +128,18 @@
     <br>
 
     <!-- images in html -->
-    <img src="../images/image_formats.PNG" alt="This is image format" width="600" height='300'>
+    <img src="images/image_formats.PNG" alt="This is image format" width="600" height='300'>
     <br>
     <br>
-    <img src="../images/image_formts.PNG" alt="This is image format (use case of alt attribute)" width="600" height='300'>
+    <img src="images/image_formts.PNG" alt="This is image format (use case of alt attribute)" width="600" height='300'>
     <br>
     <br>
-    <p><img src="../images/image_formats.PNG" alt="Image" style="float: right; height: 200px; width: 200px;">Image with <mark>float</mark> attribute</p>
+    <p><img src="images/image_formats.PNG" alt="Image" style="float: right; height: 200px; width: 200px;">Image with <mark>float</mark> attribute</p>
     <br>
     <br>
 
     <!-- image map -->
-    <p><img src="../images/computer_image.png" alt="Computer Image" usemap="#computer" style= " height: 200px; width: 200px;"">click the computer</p>
+    <p><img src="images/computer_image.png" alt="Computer Image" usemap="#computer" style= " height: 200px; width: 200px;"">click the computer</p>
     <map name="computer">
         <area shape="rect" coords="40,25,180,150" href="#para" alt="paragraph">
     </map>
@@ -184,7 +184,7 @@
     <picture>
         <source media="(min-width: 450px )" srcset="images/computer_image.png">
         <source media="(min-width: 250px)" srcset="images/nature_with_deer.jpg">
-        <img src="../images/image_formats.PNG" alt="Computer Image">
+        <img src="images/image_formats.PNG" alt="Computer Image">
         <!-- Always define image tag at last for it will take account if the picture tag does not support -->
         <!-- we can use pictute element for two cases,
                 1.Respond the images depends upon the screen or device
@@ -331,7 +331,7 @@
 
     <!-- javascript in HTML -->
     <p id ="para1" >This is responsive para</p>
-    <button type="submit" onclick="myFunction()">Click Here</button>
+    <button type="submit" onclick="myFunction()">Click Here for Respond</button>
     <script>
         function myFunction() {
             document.getElementById("para1").innerHTML = "respondant paragraph"
