updations in html elements and thier infos

--- a/web_pages/first.html
+++ b/web_pages/first.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Page</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="veeram vinoth">
+        <meta name="description" content="learning html">
+        <meta name="keywords" content="HTML, CSS, JS">
+        <meta http-equiv="refresh" content="30">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>First Page</title>
+    </head>
+    <body style="background-color:burlywood">
+        <h2>This page is rendered by object element</h2>
+        <img src="../images/svg_canvas_difference.PNG" width="200" height="300" alt="image">
+    </body>
 </html>
