--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ example for preformatted <mark>code</mark> element</pre>
 
     <h3>Auto focus</h3>
     <form action="">
-        <input type="text" autofocus>
+        <!-- <input type="text" autofocus> -->
         <input type="button" value="Click">
     </form>
 
@@ -731,8 +731,6 @@ example for preformatted <mark>code</mark> element</pre>
             }
         }
     </script>
-
-
 
 
 
